# crusades

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docker.yml
api/endpoints/: submissions.py
docker/: Dockerfile  compose.yml  env.example
docs/: Validator.md  api.md  miner.md  validator.md
environments/templar/: Dockerfile  cache_dataset.py  env.py  requirements.txt
hparams/: hparams.json
local_test/: setup_benchmark.py  train.py  verify.py
neurons/: __init__.py  base_node.py  miner.py  validator.py
richardzhang_work/: README.md  check_gaming.py  crusades-check-gaming.service  crusades-fetch-submissions.service  crusades-improve.service  crusades-sync-upstream.service  fetch_grafana.py  fetch_top_submissions.py  gaming_notes.md  improve_and_submit.py  improve_config.json  run_all.py  setup-check-gaming-service.sh  setup-fetch-submissions-service.sh  setup-improve-service.sh  setup-sync-upstream-service.sh  sync_upstream.py
richardzhang_work/gaming_checks/: batch_reply_20260209_213041.txt  batch_reply_20260210_182617.txt  state.json  v3_commit_7500551_204.json  v3_commit_7500655_191.json  v3_commit_7500996_161.json  v3_commit_7501050_79.json  v3_commit_7505428_42.json  v3_commit_7509610_241.json  v3_commit_7509775_109.json  v3_commit_7510026_241.json  v3_commit_7510303_42.json  v3_commit_7510945_241.json  v3_commit_7511170_42.json  v4_commit_7514912_243.json  v4_commit_7514912_60.json  v4_commit_7514934_154.json  v4_commit_7515021_168.json
richardzhang_work/improved/: agent_reply_20260209_221237.txt  agent_reply_20260210_000143.txt  agent_reply_20260210_001952.txt  agent_reply_20260210_021332.txt  agent_reply_20260210_024859.txt  agent_reply_20260210_035542.txt  agent_reply_20260210_103756.txt  agent_reply_20260210_104437.txt  failed_reply_20260209_231131.txt  failed_reply_20260209_234244.txt  gist.json  last_applied_changes.json  last_gen_inputs.json  submissions.json  top_attempts.json  train_20260209_221237.py  train_20260209_230130.py  train_20260210_001952.py  train_20260210_005200.py  train_20260210_012241.py  train_20260210_021332.py  train_20260210_024859.py  train_20260210_031156.py  train_20260210_041005.py  train_20260210_044038.py  train_20260210_052205.py  train_20260210_054120.py  train_20260210_065806.py  train_20260210_084557.py  train_20260210_090945.py  train_20260210_092816.py  train_20260210_103756.py  train_20260210_104117.py  train_20260210_104437.py  train_20260210_182859.py  train_agent_output.py  train_latest.py  wallet_history.json
richardzhang_work/top_submissions/: leaderboard_20260209_224503.json  leaderboard_20260209_232224.json  leaderboard_20260210_002412.json  leaderboard_20260210_005903.json  leaderboard_20260210_021935.json  leaderboard_20260210_022454.json  leaderboard_20260210_044323.json  leaderboard_20260210_090154.json  leaderboard_20260210_181117.json  leaderboard_20260210_182501.json  leaderboard_20260210_184430.json  leaderboard_20260210_185803.json  recent_20260209_224503.json
richardzhang_work/top_submissions/rank01_v3_commit_7501050_79/: stats.json  train.py
richardzhang_work/top_submissions/rank01_v4_commit_7514912_243/: stats.json
richardzhang_work/top_submissions/rank01_v4_commit_7514929_207/: stats.json  train.py
richardzhang_work/top_submissions/rank01_v4_commit_7514934_154/: stats.json
richardzhang_work/top_submissions/rank02_v3_commit_7505428_42/: stats.json
richardzhang_work/top_submissions/rank02_v3_commit_7509610_241/: stats.json
richardzhang_work/top_submissions/rank02_v3_commit_7509775_109/: stats.json  train.py
richardzhang_work/top_submissions/rank02_v4_commit_7514934_154/: stats.json
richardzhang_work/top_submissions/rank02_v4_commit_7515021_168/: stats.json  train.py
richardzhang_work/top_submissions/rank02_v4_commit_7515023_189/: stats.json  train.py
richardzhang_work/top_submissions/rank03_v3_commit_7500551_204/: stats.json
richardzhang_work/top_submissions/rank03_v3_commit_7505428_42/: stats.json
scripts/: crusades-api.service  setup-api-service.sh  view_submission.py
src/crusades/: __init__.py  config.py  logging.py
src/crusades/affinetes/: __init__.py  runner.py
src/tournament/: __init__.py  config.py  schemas.py
(+74 files in other folders)
