[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "templar-tournament"
version = "0.1.0"
description = "Bittensor subnet for training code efficiency competition"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Templar Team" }
]
keywords = ["bittensor", "machine-learning", "optimization", "competition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "bittensor>=7.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "docker>=7.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "boto3>=1.34.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.20.0",
    "datasets>=2.14.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project.scripts]
tournament-validator = "neurons.validator:main"
tournament-screener = "neurons.screener:main"
tournament-miner = "neurons.miner:main"
tplr = "tournament.tui.app:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["tournament*", "neurons*"]

[tool.setuptools.package-dir]
tournament = "src/tournament"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
