[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "templar-crusades"
version = "0.3.0"
description = "Bittensor subnet for training code efficiency crusades"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Templar Team" }
]
keywords = ["bittensor", "machine-learning", "optimization", "crusades"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "bittensor>=9.10.1,<9.11.0",  # Pin to 9.10.x like templar for localnet compatibility
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "docker>=7.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "boto3>=1.34.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.20.0",
    "datasets>=2.14.0",
    "rich>=13.0.0",
    "substrateinterface>=1.0.0",
    "substrate-interface>=1.8.1",
    "basilica-sdk>=0.13.0",  # Basilica cloud GPU SDK
    "python-logging-loki>=0.3.1",
    "aiohttp>=3.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project.scripts]
crusades-validator = "neurons.validator:main"
crusades-miner = "neurons.miner:main"
crusades-api = "crusades.api.server:main"
tplr = "crusades.tui.app:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["crusades*", "neurons*"]

[tool.setuptools.package-dir]
crusades = "src/crusades"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N812"]  # N812: Allow `import torch.nn.functional as F` (PyTorch convention)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
